[tool.poetry]
name = "throttle-table"
version = "0.1.0"
description = "makes throttle table for the nc"
authors = ["Xtreme Cookiez <10819480+XtremeCookiez@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
prettytable = "^3.16.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
